{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "eb35f618-d6fa-463e-bac5-6f0f40b768d5",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "999f1ee8-1409-47c4-b882-865eb58b65fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1776f4cf-35ef-4f9b-8a38-41bbddfe635f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "acd2c684-aab8-4b7b-80f7-50baba5952cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "3e3f5434-f3ae-4a94-92be-7ca74ed58249",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSelectNegative",
                    "type": "Button",
                    "id": "41f67032-825f-41b9-a97e-c752be799697",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSelectPositive",
                    "type": "Button",
                    "id": "d845c8f6-56e3-4132-8656-381ecb7912b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "da911612-c9b2-4505-a446-ad2a04b28843",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Grapple",
                    "type": "Value",
                    "id": "3d429848-b4b1-44b3-a66c-51113c13ec8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3c31a2a-3226-452f-ac62-19518883e1e6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a32953be-dd8e-4b7b-ac7a-e7871ad2cbc1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7aee734-1b5e-46b3-9069-50930d20c653",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bcadd2b-b96a-4a38-a549-6205261e4b00",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f7e94f9-586e-4b6a-8c9d-c55b10492cf3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponSelectNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6df4f80c-b418-458f-837c-d840eb17c406",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponSelectPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7b173f5-1c38-4afb-a1be-cf797a9014f6",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c73552c8-ed77-4747-b160-603b4265accd",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Grapple",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7eb3413c-6579-4213-ab4f-e2bfa28ee887",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Grapple",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "322e64f9-7e7a-4749-8edf-b5bab4b8ef2d",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b5baafe0-ac1d-4882-bf9c-2b49dee8628e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0db0f522-08e9-44f1-8747-63105f6e01fe",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}